--- a/mysite/results/templates/results/detail.html
+++ b/mysite/results/templates/results/detail.html
@@ -1,1 +1,21 @@
 {{ contest }}
+{% if results %}
+    <table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Rank</th>
+            <th>Points</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for result in results %}
+        <tr>
+        <td>{{ result.name }}</td><td>{{ result.rank }}</td><td>{{ result.points }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+{% else %}
+    <p>No results are available for contest.</p>
+{% endif %}
