added some more styling

--- a/mysite/results/templates/results/index.html
+++ b/mysite/results/templates/results/index.html
@@ -1,24 +1,27 @@
-{% if contests %}
-    <table>
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Name</th>
-            <th>Entries</th>
-            <th>Results</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for contest in contests %}
-        <tr>
-            <td>{{ contest.date }}</td>
-            <td><a href="/results/{{ contest.id }}">{{ contest.name }}</a></td>
-            <td>{{ contest.entries }}</td>
-            <td>{{ contest.results.count }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-{% else %}
-    <p>No contests are available.</p>
-{% endif %}
+{% extends 'results/base.html' %}
+{% block content %}
+    {% if contests %}
+        <table class="table table-hover table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Date</th>
+                <th scope="col">Name</th>
+                <th scope="col">Entries</th>
+                <th scope="col">Results</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for contest in contests %}
+            <tr>
+                <td>{{ contest.date }}</td>
+                <td><a href="/results/{{ contest.id }}">{{ contest.name }}</a></td>
+                <td>{{ contest.entries }}</td>
+                <td>{{ contest.results.count }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+    {% else %}
+        <p>No contests are available.</p>
+    {% endif %}
+{% endblock content%}
