--- a/mysite/results/templates/results/detail.html
+++ b/mysite/results/templates/results/detail.html
@@ -1,53 +1,62 @@
 {% extends 'results/base.html' %}
-{% load results_tags %}
-{% comment %}
-{{ contest }}
+{% load results_tags static %}
+{% block content %}
+
+<div class="row">
+{% if ownership %}
+  <div class="col-md-8">
+    <h2 class="sub-header">Ownership</h2>
+    <div class="table-responsive">
+      <table id="ownership" class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th class="th-sm">Player</th>
+          <th class="th-sm">Pos</th>
+          <th class="th-sm">Ownership</th>
+          <th class="th-sm">Points</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for row in ownership %}
+        <tr>
+          <td>{{ row.player.name }}</td>
+          <td>{{ row.player.position }}</td>
+          <td>{{ row.ownership|percentage }}</td>
+          <td>{{ row.fpts }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+      </table>
+    </div>
+  </div>
+{% else %}
+    <p>No ownership information is available for contest.</p>
+{% endif %}
 {% if results %}
-    <table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Rank</th>
-            <th>Points</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for result in results %}
-        <tr>
-            <td>{{ result.name }}</td><td>{{ result.rank }}</td><td>{{ result.points }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    </table>
+    <div class="col-md-4">
+        <h2 class="sub-header">Entries</h2>
+        <div class="table-responsive">
+            <table id="entries" class="table table-hover table-striped table-sm" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Rank</th>
+                    <th>Points</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for result in results %}
+                <tr>
+                    <td>{{ result.name }}</td><td>{{ result.rank }}</td><td>{{ result.points }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+            </table>
+        </div>
+    </div>
 {% else %}
     <p>No results are available for contest.</p>
 {% endif %}
-{% endcomment %}
-{% block content %}
-    {% if ownership %}
-        <table id="results" class="table table-hover table-striped table-sm">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Player</th>
-                <th scope="col">Pos</th>
-                <th scope="col">Ownership</th>
-                <th scope="col">Points</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for row in ownership %}
-            <tr>
-                <td>{{ row.player.name }}</td>
-                <td>{{ row.player.position }}</td>
-                <td>{{ row.ownership|percentage }}</td>
-                <td>{{ row.fpts }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-        </table>
-    {% else %}
-        <p>No ownership information is available for contest.</p>
-    {% endif %}
-    
-    
+</div>
+
 {% endblock content %}
