added draft_group_id to DKContest. i need to get salary for DKContest player somehow..

--- a/mysite/results/templates/results/index.html
+++ b/mysite/results/templates/results/index.html
@@ -8,6 +8,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Entries</th>
                 <th scope="col">Results</th>
+                <th scope="col">draft_group_id</th>
             </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
                 <td><a class="text-default" href="/results/{{ contest.id }}">{{ contest.name }}</a></td>
                 <td>{{ contest.entries }}</td>
                 <td>{{ contest.results.count }}</td>
+                <td>{{ contest.draft_group_id }}</td>
             </tr>
         {% endfor %}
         </tbody>
