--- a/mysite/results/templates/results/index.html
+++ b/mysite/results/templates/results/index.html
@@ -8,6 +8,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Entries</th>
                 <th scope="col">Results</th>
+                <th scope="col">contest_id</th>
                 <th scope="col">draft_group_id</th>
             </tr>
         </thead>
@@ -18,6 +19,7 @@
                 <td><a class="text-default" href="/results/{{ contest.id }}">{{ contest.name }}</a></td>
                 <td>{{ contest.entries }}</td>
                 <td>{{ contest.results.count }}</td>
+                <td>{{ contest.dk_id }}</td>
                 <td>{{ contest.draft_group_id }}</td>
             </tr>
         {% endfor %}
